# dev-templates

./: README.md  flake.nix
elixir/: flake.nix
go/: flake.nix
hashi/: flake.nix
nix/: flake.nix
python/: flake.nix
python-giga/: flake.nix  pyproject.toml
