[tool.poetry]
name = "python3-nix"
version = "0.1.0"
description = "python using nix"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.9"
acme = "2.7.4"
adal = "1.2.7"
aiodns = "3.1.1"
aiofiles = "23.2.1"
aiohttp = "3.8.6"
aiosignal = "1.3.1"
alabaster = "0.7.13"
anyio = "3.7.1"
ariadne = "0.21"
asgiref = "3.7.2"
asttokens = "2.4.1"
async-timeout = "4.0.3"
attrs = "23.1.0"
autodoc-pydantic = "1.9.0"
azure-core = "1.29.5"
azure-storage-blob = "12.19.0"
babel = "2.13.1"
bandit = "1.7.5"
bcrypt = "4.0.1"
beanstalkc3 = "0.4.0"
beautifulsoup4 = "4.12.2"
black = "22.12.0"
blinker = "1.7.0"
boto3 = "1.24.22"
botocore = "1.27.22"
brotli = "1.1.0"
brotlicffi = "1.1.0.0"
build = "1.0.3"
cachecontrol = {version = "0.13.1", extras = ["filecache"]}
cachetools = "5.3.2"
certbot = "2.7.4"
certifi = "2023.7.22"
cffi = "1.15.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
classify-imports = "4.2.0"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
configargparse = "1.7"
configobj = "5.0.8"
coverage = {version = "7.3.2", extras = ["toml"]}
crashtest = "0.4.1"
crlibm = "1.0.3"
cryptography = "41.0.5"
cssselect2 = "0.7.0"
datadiff = "2.2.0"
decorator = "5.1.1"
defusedxml = "0.7.1"
deprecated = "1.2.14"
distlib = "0.3.7"
distro = "1.8.0"
dnspython = "2.0.0"
docutils = "0.17.1"
dulwich = "0.21.6"
elasticsearch-dsl = "6.4.0"
elasticsearch = "6.8.2"
email-validator = "2.1.0.post1"
enum-compat = "0.0.3"
exceptiongroup = "1.1.3"
execnet = "2.0.2"
executing = "2.0.1"
fabric2 = "3.2.2"
fabric = "1.15.0"
faker = "20.0.0"
fastapi = "0.90.1"
fastjsonschema = "2.18.1"
filelock = "3.13.1"
flake8-bugbear = "23.9.16"
flake8-commas = "2.1.0"
flake8-comprehensions = "3.14.0"
flake8-pyproject = "1.2.3"
flake8-quotes = "3.3.2"
flake8-rst-docstrings = "0.3.0"
flake8-tidy-imports = "4.10.0"
flake8 = "6.1.0"
flask-wtf = "1.2.1"
flask = "2.1.3"
fonttools = {version = "4.44.0", extras = ["woff"]}
fqdn = "1.5.1"
freezegun = "1.2.2"
frozenlist = "1.4.0"
fuzzywuzzy = "0.18.0"
geoip2 = "4.7.0"
gitdb = "4.0.11"
gitpython = "3.1.40"
google-api-core = {version = "2.14.0", extras = ["grpc"]}
google-api-python-client = "2.107.0"
google-auth-httplib2 = "0.1.1"
google-auth = "2.23.4"
google-cloud-appengine-logging = "1.3.2"
google-cloud-audit-log = "0.2.5"
google-cloud-bigquery = "3.13.0"
google-cloud-core = "2.3.3"
google-cloud-error-reporting = "1.9.2"
google-cloud-firestore = "2.13.1"
google-cloud-kms = "2.19.2"
google-cloud-logging = "3.8.0"
google-cloud-storage = "2.13.0"
google-cloud-vision = "3.4.5"
google-crc32c = "1.5.0"
google-resumable-media = "2.6.0"
googleapis-common-protos = {version = "1.61.0", extras = ["grpc"]}
graphql-core = "3.2.3"
grpc-google-iam-v1 = "0.12.7"
grpcio-status = "1.59.2"
grpcio = "1.59.2"
gunicorn = "21.2.0"
h11 = "0.14.0"
h2 = "4.1.0"
headerparser = "0.5.1"
hiredis = "2.2.3"
hpack = "4.0.0"
html2text = "2020.1.16"
html5lib = "1.1"
httmock = "1.4.0"
httpcore = "1.0.2"
httplib2 = "0.22.0"
httptools = "0.6.1"
httpx = "0.25.1"
hyperframe = "6.0.1"
idna = "3.4"
ijson = "3.2.3"
imagesize = "1.4.1"
importlib-metadata = "6.8.0"
infinity = "1.5"
iniconfig = "2.0.0"
installer = "0.7.0"
interval = "1.0.0"
intervals = "0.9.2"
invoke = "2.2.0"
ipwhois = "1.2.0"
ipython = "8.17.2"
iso8601 = "2.1.0"
isodate = "0.6.1"
isort = "5.12.0"
itsdangerous = "2.1.2"
jaraco-classes = "3.3.0"
jedi = "0.19.1"
jeepney = "0.8.0"
jinja2-highlight = "0.6.1"
jinja2 = "3.1.2"
jira = "3.5.2"
jmespath = "1.0.1"
josepy = "1.14.0"
keyring = "24.3.0"
kopf = "1.36.2"
levenshtein = "0.23.0"
linkify-it-py = "2.0.2"
lockfile = "0.12.2"
lxml = "4.9.3"
markdown-it-py = "3.0.0"
markdown2 = "2.4.10"
markupsafe = "2.1.3"
matplotlib-inline = "0.1.6"
maxminddb = "2.4.0"
mccabe = "0.7.0"
mdurl = "0.1.2"
mechanicalsoup = "1.3.0"
mock = "5.1.0"
more-itertools = "10.1.0"
msal = "1.25.0"
msgpack = "1.0.7"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
mypy = "1.7.0"
netaddr = "0.9.0"
networkx = "3.2.1"
nose-exclude = "0.5.0"
nose = "1.3.7"
numpy = "1.26.2"
o365 = "2.0.31"
oauthlib = "3.2.2"
orjson = "3.9.10"
packaging = "23.2"
#pandas = "2.1.0"
paramiko = "2.12.0"
parsedatetime = "2.6"
parso = "0.8.3"
path-py = "12.5.0"
path = "16.7.1"
pathspec = "0.11.2"
pbr = "6.0.0"
pdfminer-six = "20221105"
pexpect = "4.8.0"
pillow = "10.1.0"
pkginfo = "1.9.6"
platformdirs = "3.11.0"
pluggy = "1.3.0"
poetry-core = "1.8.1"
poetry-plugin-export = "1.6.0"
poetry = "1.7.0"
prompt-toolkit = "3.0.40"
proto-plus = "1.22.3"
protobuf = "4.25.0"
psycopg2 = "2.9.9"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyasn1-modules = "0.3.0"
pyasn1 = "0.5.0"
pycares = "4.4.0"
pycodestyle = "2.11.1"
pycountry = "22.3.5"
pycparser = "2.21"
pycryptodomex = "3.19.0"
pydantic = "1.10.13"
pydyf = "0.8.0"
pyflakes = "3.1.0"
pygal = "3.0.0"
pygeoip = "0.3.2"
pygments = "2.16.1"
pyinterval = "1.2.0"
pyjwt = {version = "2.8.0", extras = ["crypto"]}
pykube-ng = "23.6.0"
pynacl = "1.5.0"
pyopenssl = "23.3.0"
pyotp = "2.9.0"
pyparsing = "3.1.1"
pyphen = "0.14.0"
pypng = "0.20220715.0"
pyproject-hooks = "1.0.0"
pyrfc3339 = "1.1"
pytest-cov = "4.1.0"
pytest-faker = "2.0.0"
pytest-mock = "3.12.0"
pytest-mypy = "0.10.3"
pytest-only = "2.0.0"
pytest-xdist = "3.4.0"
pytest = "7.4.3"
python-dateutil = "2.8.2"
python-json-logger = "2.0.7"
python-levenshtein = "0.23.0"
python-multipart = "0.0.6"
python-registry = "1.3.1"
pytz-deprecation-shim = "0.1.0.post0"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
qrcode = "7.4.2"
rapidfuzz = "3.5.2"
redis = "5.0.1"
regex = "2023.10.3"
reorder-python-imports = "3.12.0"
requests-file = "1.5.1"
requests-oauthlib = "1.3.1"
requests-toolbelt = "1.0.0"
requests = "2.31.0"
resolver = "0.2.1"
respx = "0.20.2"
restructuredtext-lint = "1.4.0"
rich = "13.6.0"
rsa = "4.9"
ruff = "0.1.5"
s3transfer = "0.6.2"
secretstorage = "3.3.3"
sentry-sdk = "1.35.0"
setuptools = "65.7.0"
shellingham = "1.5.4"
six = "1.16.0"
slack-bolt = "1.18.0"
slack-sdk = "3.23.0"
smmap = "5.0.1"
sniffio = "1.3.0"
snowballstemmer = "2.2.0"
soupsieve = "2.5"
sphinx-rtd-theme = "1.3.0"
sphinx = "5.2.0"
sphinxcontrib-applehelp = "1.0.7"
sphinxcontrib-devhelp = "1.0.5"
sphinxcontrib-htmlhelp = "2.0.4"
sphinxcontrib-jquery = "4.1"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-mermaid = "0.9.2"
sphinxcontrib-qthelp = "1.0.6"
sphinxcontrib-serializinghtml = "1.1.9"
sqlalchemy-utils = "0.41.1"
sqlalchemy = "1.3.24"
sqlparse = "0.4.4"
#ssdeep = "3.4"
stack-data = "0.6.3"
starlette-wtf = "0.4.3"
starlette = "0.23.1"
statsd = "4.0.1"
stevedore = "5.1.0"
stringcase = "1.2.0"
supervisor = "4.2.5"
tinycss2 = "1.2.1"
tldextract = "2.2.3"
tomli = "2.0.1"
tomlkit = "0.12.2"
traitlets = "5.13.0"
trove-classifiers = "2023.11.9"
types-click = "7.1.8"
types-flask = "1.1.6"
types-jinja2 = "2.11.9"
types-markupsafe = "1.1.10"
types-psycopg2 = "2.9.21.15"
types-pyyaml = "6.0.12.12"
types-requests = "2.31.0.6"
types-urllib3 = "1.26.25.14"
types-werkzeug = "1.0.9"
typing-extensions = "4.8.0"
tzdata = "2023.3"
tzlocal = "4.3.1"
uc-micro-py = "1.0.2"
unicodecsv = "0.14.1"
uritemplate = "4.1.1"
urllib3 = "1.26.11"
uvicorn = "0.24.0.post1"
uvloop = "0.19.0"
validators = "0.22.0"
virtualenv = "20.24.6"
watchgod = "0.8.2"
wcwidth = "0.2.9"
weasyprint = "60.1"
webencodings = "0.5.1"
websockets = "12.0"
werkzeug = "2.2.3"
wordsegment = "1.3.1"
wrapt = "1.16.0"
wsgi-intercept = "1.12.1"
wsgi-lite = "0.5a3-1"
wtforms-alchemy = "0.18.0"
wtforms-components = "0.10.5"
wtforms = "2.3.3"
xlsxwriter = "3.1.9"
xxhash = "3.4.1"
yarl = "1.9.2"
zipp = "3.17.0"
zopfli = "0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
